tests/ui/explicit-tail-calls/become-operator.stderr
error: `become` does not support operators
  --> $DIR/become-operator.rs:10:12
   |
LL |     become a + b;
   |     -------^^^^^
   |     |
   |     help: try using `return` instead: `return`
   |
   = note: using `become` on a builtin operator is not useful

error: `become` does not support operators
  --> $DIR/become-operator.rs:14:12
   |
LL |     become a + b;
   |            ^^^^^
   |
help: try using the method directly
   |
LL |     become (a).add(b);
   |            + ~~~~~~ +

error: `become` does not support operators
  --> $DIR/become-operator.rs:18:12
   |
LL |     become !x;
   |     -------^^
   |     |
   |     help: try using `return` instead: `return`
   |
   = note: using `become` on a builtin operator is not useful

error: `become` does not support operators
  --> $DIR/become-operator.rs:22:12
   |
LL |     become !x;
   |            ^^
   |
help: try using the method directly
   |
LL |     become (x).not();
   |            ~ +++++++

error: `become` does not support operators
  --> $DIR/become-operator.rs:26:12
   |
LL |     become x[i]
   |     -------^^^^
   |     |
   |     help: try using `return` instead: `return`
   |
   = note: using `become` on a builtin operator is not useful

error: `become` does not support operators
  --> $DIR/become-operator.rs:33:12
   |
LL |     become *a ^= 1;
   |     -------^^^^^^^
   |     |
   |     help: try using `return` instead: `return`
   |
   = note: using `become` on a builtin operator is not useful

error: `become` does not support operators
  --> $DIR/become-operator.rs:37:12
   |
LL |     become *b ^= 1;
   |            ^^^^^^^
   |
help: try using the method directly
   |
LL |     become (*b).bitxor_assign(1);
   |            +  ~~~~~~~~~~~~~~~~ +

error: aborting due to 7 previous errors

